syntax = "proto3";

option java_multiple_files = true;
option java_package = "globesort";
option java_outer_classname = "GlobeSortProto";

service GlobeSort {
    rpc Ping (Empty) returns (Empty) {}
    rpc SortIntegers (SortArrayInfo) returns (SortArrayInfo) {}
}

message Empty { 
}

message SortArrayInfo {
    repeated int32 values = 1;
    int64 sorting_time = 2;
}
